# gfg

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/gfg/: __init__.py
