[project]
name = "gfg"
version = "0.1.0"
description = "Geotechnical Figures & Graphics."
readme = "README.md"
authors = [
    { name = "Francesco Franco", email = "ffrancoa97@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "narwhals>=2.21.2",
    "ultraplot>=2.2.0",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest"]
test-polars = ["polars", "pytest"]
test-pandas = ["pandas", "pytest"]
